# VanillaCNN_faceLandmark

./: .gitignore  CMakeLists.txt  README.md  caffe  face_cnn.cpp  face_landmark.cpp  face_landmark.py
common/: DataRow.py  NormlizedMSE.py  batch_reader.py  landmark_augment.py  landmark_helper.py  landmark_input_datalayer.py
testing/: test.py
tools/: drawAlign.py  get68PtsList.py  getHDF5.py  parseLog.py  plot_loss.py
train/: Demo.py  adam_solver_5p.prototxt  getHDF5.py  landmark_deploy_5p.prototxt  landmark_train_5p.prototxt  train.py  train.sh
training/: train.py  train.sh
training/net1/: solver.prototxt  train.prototxt
training/net2/: vanilla_adam_solver.prototxt  vanilla_deploy.prototxt  vanilla_train.prototxt
vanilla-40/: vanilla_deploy.prototxt  vanilla_train.prototxt
vanilla-40/model_5p/: readme.md  vanilla_adam_solver.prototxt
vanilla-40/model_68p/: deploy.prototxt  reademe.md  train.py  train.sh  vanilla_adam_solver.prototxt  vanilla_train_68p.prototxt
